[gd_scene load_steps=6 format=3 uid="uid://drc50lwybh48x"]

[ext_resource type="Material" uid="uid://cuocdq6pvulnx" path="res://art/item/item.tres" id="1_0nmcn"]
[ext_resource type="Script" path="res://scripts/item.gd" id="1_jn2be"]
[ext_resource type="Shader" path="res://shaders/shine.gdshader" id="2_mf7bj"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_h1au2"]
shader = ExtResource("2_mf7bj")
shader_parameter/shine_color = Vector4(1, 1, 1, 1)
shader_parameter/shine_speed = 1.0
shader_parameter/shine_size = 0.01

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yl1kp"]
resource_local_to_scene = true

[node name="Item" type="Area2D"]
material = ExtResource("1_0nmcn")
collision_layer = 0
collision_mask = 2
script = ExtResource("1_jn2be")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_h1au2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_yl1kp")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
